# QQbot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  run_bot.py
deploy/systemd/: qqbot.service.example
scripts/: deploy_to_runtime.sh  start.sh  stop.sh
src/bot_app/: config.py  logging_utils.py  main.py  models.py  runtime.py  storage.py
src/bot_app/plugins/: avatar_rotation.py  message_ingest.py  private_commands.py
src/bot_app/services/: approval.py  avatar_rotation.py  cooldown.py  exchange_parse.py  learned_rules.py  minimax.py  notify.py  prefilter.py  self_learning.py  semantic_parse.py  slot_parser.py  workflow.py
tests/: test_claim_listening_pause.py  test_slot_parser.py
